[package]
name = "cord-broker"
version = "0.2.0"
edition = "2018"
authors = ["Cord Contributors"]
license = "MPL-2.0"
description = """
The server-side routing platform for the Cord Platform that exchanges messages between
publishers and subscribers.
"""
homepage = "https://cord-proj.org"
repository = "https://github.com/cord-proj/cord-broker"
readme = "README.md"
keywords = ["cord", "stream"]
categories = ["network-programming", "data-structures"]
include = ["src/**/*"]

[dependencies]
async-trait = "0.1"
clap = "2.33"
cord-message = "0.2"
env_logger = "0.7"
error-chain = "0.12"
futures = "0.3"
futures-locks = "0.6"
log = "0.4"
tokio = { version = "0.2", features = [ "io-std", "io-util", "macros", "rt-threaded", "sync", "tcp" ] }
tokio-util = { version = "0.3", features = [ "codec" ] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
#cord-client = "0.2"
cord-message = "0.2"
lazy_static = "1.4"
